--- a/api_rip/src/app/yu-gi-oh/yu-gi-oh.component.html
+++ b/api_rip/src/app/yu-gi-oh/yu-gi-oh.component.html
@@ -1,1 +1,5 @@
-<p>yu-gi-oh works!</p>
+
+<div *ngFor = "let g of b">
+    <p>{{g.name}}</p>
+    <a routerLink="/item/{{g.id}}">{{g.id}}</a>
+</div>
